src/jvm/clojure/lang/ReaderParser.java
// $ANTLR 3.0 /Users/rich/dev/clojure/src/jvm/Reader.g 2007-07-13 12:56:20

package clojure.lang;

import java.math.BigInteger;
import java.io.Writer;
import java.io.PrintWriter;


import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/**
 * Copyright (c) Rich Hickey. All rights reserved.
 * The use and distribution terms for this software are covered by the
 * Common Public License 1.0 (http://opensource.org/licenses/cpl.php)
 * which can be found in the file CPL.TXT at the root of this distribution.
 * By using this software in any fashion, you are agreeing to be bound by
 * the terms of this license.
 * You must not remove this notice, or any other, from this software.
 */
public class ReaderParser extends Parser{
public static final String[] tokenNames = new String[]{
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identifier", "JavaIdentifier", "DotDot", "FloatingPointLiteral",
		"CharacterLiteral", "StringLiteral", "TrueToken", "NullToken", "DecimalLiteral", "HexLiteral", "OctalLiteral",
		"MethodIdentifier", "Comma", "HexDigit", "Exponent", "FloatTypeSuffix", "EscapeSequence", "UnicodeEscape",
		"OctalEscape", "Letter", "JavaIDDigit", "WS", "COMMENT", "LINE_COMMENT", "'('", "')'", "'['", "']'", "'{'",
		"'}'", "'/'", "':'", "'#^'", "'.'"
};
public static final int TrueToken = 10;
public static final int Exponent = 18;
public static final int OctalLiteral = 14;
public static final int Identifier = 4;
public static final int HexDigit = 17;
public static final int WS = 25;
public static final int CharacterLiteral = 8;
public static final int MethodIdentifier = 15;
public static final int COMMENT = 26;
public static final int StringLiteral = 9;
public static final int LINE_COMMENT = 27;
public static final int DotDot = 6;
public static final int JavaIDDigit = 24;
public static final int Letter = 23;
public static final int UnicodeEscape = 21;
public static final int HexLiteral = 13;
public static final int Comma = 16;
public static final int EscapeSequence = 20;
public static final int EOF = -1;
public static final int NullToken = 11;
public static final int DecimalLiteral = 12;
public static final int OctalEscape = 22;
public static final int FloatingPointLiteral = 7;
public static final int JavaIdentifier = 5;
public static final int FloatTypeSuffix = 19;

public ReaderParser(TokenStream input){
	super(input);
	ruleMemo = new HashMap[47 + 1];
}


public String[] getTokenNames(){
	return tokenNames;
}

public String getGrammarFileName(){
	return "/Users/rich/dev/clojure/src/jvm/Reader.g";
}

//add these lines to expressions, dotExpression, args
// in the e=expression(); case
//after:
//            	    if (failed) return val;

/*WARNING- HAND MODIFIED!
	if(es == null) es = new ArrayList();
	es.add(e);
	// END HAND MODIFIED*/

//add this to mapexpr:
/*WARNING- HAND MODIFIED!
						val = val.assoc(k, v);
	// END HAND MODIFIED*/

final static Symbol DOTDOT = new Symbol("..");

public static void main(String[] args) throws Exception{
	Writer w = new PrintWriter(System.out);
	// Create an input character stream from standard in
	CharStream input = new ANTLRFileStream(args[0]);
	// Create an ExprLexer that feeds from that stream
	ReaderLexer lexer = new ReaderLexer(input);
	// Create a stream of tokens fed by the lexer
	CommonTokenStream tokens = new CommonTokenStream(lexer);
	// Create a parser that feeds off the token stream
	ReaderParser parser = new ReaderParser(tokens);
	// Begin parsing at rule prog, get return value structure
	try
		{
		if(lexer.rex != null)
			throw lexer.rex;
		for(int i = 0; i < 10; i++)
			{
			Object e = parser.expression();
			RT.print(e, w);
			w.write('\n');
			w.flush();
			}
		}
	catch(RecognitionException rex)
		{
		System.err.printf("Error parsing at line: %d, col: %d", rex.line, rex.charPositionInLine);
		}
}

protected void mismatch(IntStream input, int ttype, BitSet follow)
		throws RecognitionException{
	throw new MismatchedTokenException(ttype, input);
}

public void recoverFromMismatchedSet(IntStream input,
                                     RecognitionException e,
                                     BitSet follow)
		throws RecognitionException{
	throw e;
}


// $ANTLR start expression
// /Users/rich/dev/clojure/src/jvm/Reader.g:106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );
public final Object expression() throws RecognitionException{
	Object val = null;
	int expression_StartIndex = input.index();
	Object lt = null;

	Symbol s = null;

	Keyword k = null;

	ISeq le = null;

	IPersistentArray ve = null;

	IPersistentMap me = null;

	Obj mx = null;

	Object g = null;


	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 1))
			{
			return val;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:107:4: (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression )
		int alt1 = 8;
		switch(input.LA(1))
			{
			case FloatingPointLiteral:
			case CharacterLiteral:
			case StringLiteral:
			case TrueToken:
			case NullToken:
			case DecimalLiteral:
			case HexLiteral:
			case OctalLiteral:
			{
			alt1 = 1;
			}
			break;
			case Identifier:
			case JavaIdentifier:
			{
			switch(input.LA(2))
				{
				case 34:
				{
				int LA1_9 = input.LA(3);

				if(((LA1_9 >= Identifier && LA1_9 <= JavaIdentifier)))
					{
					int LA1_12 = input.LA(4);

					if((LA1_12 == 37))
						{
						alt1 = 8;
						}
					else if((LA1_12 == EOF || (LA1_12 >= Identifier && LA1_12 <= OctalLiteral) || LA1_12 == Comma ||
					         (LA1_12 >= 28 && LA1_12 <= 33) || (LA1_12 >= 35 && LA1_12 <= 36)))
						{
						alt1 = 2;
						}
					else
						{
						if(backtracking > 0)
							{
							failed = true;
							return val;
							}
						NoViableAltException nvae =
								new NoViableAltException(
										"106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );",
										1, 12, input);

						throw nvae;
						}
					}
				else
					{
					if(backtracking > 0)
						{
						failed = true;
						return val;
						}
					NoViableAltException nvae =
							new NoViableAltException(
									"106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );",
									1, 9, input);

					throw nvae;
					}
				}
				break;
				case 37:
				{
				alt1 = 8;
				}
				break;
				case EOF:
				case Identifier:
				case JavaIdentifier:
				case DotDot:
				case FloatingPointLiteral:
				case CharacterLiteral:
				case StringLiteral:
				case TrueToken:
				case NullToken:
				case DecimalLiteral:
				case HexLiteral:
				case OctalLiteral:
				case Comma:
				case 28:
				case 29:
				case 30:
				case 31:
				case 32:
				case 33:
				case 35:
				case 36:
				{
				alt1 = 2;
				}
				break;
				default:
					if(backtracking > 0)
						{
						failed = true;
						return val;
						}
					NoViableAltException nvae =
							new NoViableAltException(
									"106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );",
									1, 2, input);

					throw nvae;
				}

			}
			break;
			case DotDot:
			{
			int LA1_3 = input.LA(2);

			if((LA1_3 == 37))
				{
				alt1 = 8;
				}
			else if((LA1_3 == EOF || (LA1_3 >= Identifier && LA1_3 <= OctalLiteral) || LA1_3 == Comma ||
			         (LA1_3 >= 28 && LA1_3 <= 33) || (LA1_3 >= 35 && LA1_3 <= 36)))
				{
				alt1 = 2;
				}
			else
				{
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				NoViableAltException nvae =
						new NoViableAltException(
								"106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );",
								1, 3, input);

				throw nvae;
				}
			}
			break;
			case 35:
			{
			alt1 = 3;
			}
			break;
			case 28:
			{
			alt1 = 4;
			}
			break;
			case 30:
			{
			alt1 = 5;
			}
			break;
			case 32:
			{
			alt1 = 6;
			}
			break;
			case 36:
			{
			alt1 = 7;
			}
			break;
			default:
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				NoViableAltException nvae =
						new NoViableAltException(
								"106:1: expression returns [Object val] : (lt= literal | s= symbol | k= keyword | le= listExpression | ve= vectorExpression | me= mapExpression | mx= metaExpression | g= dotExpression );",
								1, 0, input);

				throw nvae;
			}

		switch(alt1)
			{
			case 1:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:107:4: lt= literal
			{
			pushFollow(FOLLOW_literal_in_expression73);
			lt = literal();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = lt;
				}

			}
			break;
			case 2:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:108:3: s= symbol
			{
			pushFollow(FOLLOW_symbol_in_expression83);
			s = symbol();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = s;
				}

			}
			break;
			case 3:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:109:3: k= keyword
			{
			pushFollow(FOLLOW_keyword_in_expression93);
			k = keyword();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = k;
				}

			}
			break;
			case 4:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:110:3: le= listExpression
			{
			pushFollow(FOLLOW_listExpression_in_expression103);
			le = listExpression();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = le;
				}

			}
			break;
			case 5:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:111:3: ve= vectorExpression
			{
			pushFollow(FOLLOW_vectorExpression_in_expression113);
			ve = vectorExpression();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = ve;
				}

			}
			break;
			case 6:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:112:3: me= mapExpression
			{
			pushFollow(FOLLOW_mapExpression_in_expression123);
			me = mapExpression();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = me;
				}

			}
			break;
			case 7:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:113:3: mx= metaExpression
			{
			pushFollow(FOLLOW_metaExpression_in_expression133);
			mx = metaExpression();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = mx;
				}

			}
			break;
			case 8:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:114:3: g= dotExpression
			{
			pushFollow(FOLLOW_dotExpression_in_expression143);
			g = dotExpression();
			_fsp--;
			if(failed) return val;
			if(backtracking == 0)
				{
				val = g;
				}

			}
			break;

			}
		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 1, expression_StartIndex);
			}
		}
	return val;
}
// $ANTLR end expression

// $ANTLR start listExpression
// /Users/rich/dev/clojure/src/jvm/Reader.g:117:1: listExpression returns [ISeq val] : '(' es= expressions ')' ;

public final ISeq listExpression() throws RecognitionException{
	ISeq val = null;
	int listExpression_StartIndex = input.index();
	List es = null;


	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 2))
			{
			return val;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:118:4: ( '(' es= expressions ')' )
		// /Users/rich/dev/clojure/src/jvm/Reader.g:118:4: '(' es= expressions ')'
		{
		match(input, 28, FOLLOW_28_in_listExpression160);
		if(failed) return val;
		pushFollow(FOLLOW_expressions_in_listExpression167);
		es = expressions();
		_fsp--;
		if(failed) return val;
		match(input, 29, FOLLOW_29_in_listExpression169);
		if(failed) return val;
		if(backtracking == 0)
			{
			val = es != null ? RT.seq(es) : PersistentList.EMPTY;
			}

		}

		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 2, listExpression_StartIndex);
			}
		}
	return val;
}
// $ANTLR end listExpression

// $ANTLR start expressions
// /Users/rich/dev/clojure/src/jvm/Reader.g:121:10: fragment expressions returns [List es] : (e= expression )* ;

public final List expressions() throws RecognitionException{
	List es = null;
	int expressions_StartIndex = input.index();
	Object e = null;


	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 3))
			{
			return es;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:122:4: ( (e= expression )* )
		// /Users/rich/dev/clojure/src/jvm/Reader.g:122:4: (e= expression )*
		{
		// /Users/rich/dev/clojure/src/jvm/Reader.g:122:6: (e= expression )*
		loop2:
		do
			{
			int alt2 = 2;
			int LA2_0 = input.LA(1);

			if(((LA2_0 >= Identifier && LA2_0 <= OctalLiteral) || LA2_0 == 28 || LA2_0 == 30 || LA2_0 == 32 ||
			    (LA2_0 >= 35 && LA2_0 <= 36)))
				{
				alt2 = 1;
				}


			switch(alt2)
				{
				case 1:
					// /Users/rich/dev/clojure/src/jvm/Reader.g:0:0: e= expression
				{
				pushFollow(FOLLOW_expression_in_expressions191);
				e = expression();
				_fsp--;
				if(failed) return es;
				//*WARNING- HAND MODIFIED!
				if(es == null) es = new ArrayList();
				es.add(e);
				// END HAND MODIFIED*/

				}
				break;

				default:
					break loop2;
				}
			} while(true);


		}

		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 3, expressions_StartIndex);
			}
		}
	return es;
}
// $ANTLR end expressions

// $ANTLR start vectorExpression
// /Users/rich/dev/clojure/src/jvm/Reader.g:125:1: vectorExpression returns [IPersistentArray val] : '[' es= expressions ']' ;

public final IPersistentArray vectorExpression() throws RecognitionException{
	IPersistentArray val = null;
	int vectorExpression_StartIndex = input.index();
	List es = null;


	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 4))
			{
			return val;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:126:4: ( '[' es= expressions ']' )
		// /Users/rich/dev/clojure/src/jvm/Reader.g:126:4: '[' es= expressions ']'
		{
		match(input, 30, FOLLOW_30_in_vectorExpression208);
		if(failed) return val;
		pushFollow(FOLLOW_expressions_in_vectorExpression214);
		es = expressions();
		_fsp--;
		if(failed) return val;
		match(input, 31, FOLLOW_31_in_vectorExpression216);
		if(failed) return val;
		if(backtracking == 0)
			{
			val = es != null ? RT.tuple(es.toArray()) : PersistentVector.EMPTY;
			}

		}

		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 4, vectorExpression_StartIndex);
			}
		}
	return val;
}
// $ANTLR end vectorExpression

// $ANTLR start mapExpression
// /Users/rich/dev/clojure/src/jvm/Reader.g:129:1: mapExpression returns [IPersistentMap val] : '{' (k= expression v= expression )* '}' ;

public final IPersistentMap mapExpression() throws RecognitionException{
	IPersistentMap val = null;
	int mapExpression_StartIndex = input.index();
	Object k = null;

	Object v = null;


	val = PersistentHashMap.EMPTY;

	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 5))
			{
			return val;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:133:4: ( '{' (k= expression v= expression )* '}' )
		// /Users/rich/dev/clojure/src/jvm/Reader.g:133:4: '{' (k= expression v= expression )* '}'
		{
		match(input, 32, FOLLOW_32_in_mapExpression236);
		if(failed) return val;
		// /Users/rich/dev/clojure/src/jvm/Reader.g:133:8: (k= expression v= expression )*
		loop3:
		do
			{
			int alt3 = 2;
			int LA3_0 = input.LA(1);

			if(((LA3_0 >= Identifier && LA3_0 <= OctalLiteral) || LA3_0 == 28 || LA3_0 == 30 || LA3_0 == 32 ||
			    (LA3_0 >= 35 && LA3_0 <= 36)))
				{
				alt3 = 1;
				}


			switch(alt3)
				{
				case 1:
					// /Users/rich/dev/clojure/src/jvm/Reader.g:133:9: k= expression v= expression
				{
				pushFollow(FOLLOW_expression_in_mapExpression241);
				k = expression();
				_fsp--;
				if(failed) return val;
				pushFollow(FOLLOW_expression_in_mapExpression245);
				v = expression();
				_fsp--;
				if(failed) return val;
				//*WARNING- HAND MODIFIED!
				val = val.assoc(k, v);
				// END HAND MODIFIED*/

				}
				break;

				default:
					break loop3;
				}
			} while(true);

		match(input, 33, FOLLOW_33_in_mapExpression249);
		if(failed) return val;

		}

		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 5, mapExpression_StartIndex);
			}
		}
	return val;
}
// $ANTLR end mapExpression

// $ANTLR start symbol
// /Users/rich/dev/clojure/src/jvm/Reader.g:136:1: symbol returns [Symbol val] : (n= ( Identifier | JavaIdentifier ) | ns= ( Identifier | JavaIdentifier ) '/' nn= ( Identifier | JavaIdentifier ) | dd= DotDot );

public final Symbol symbol() throws RecognitionException{
	Symbol val = null;
	int symbol_StartIndex = input.index();
	Token n = null;
	Token ns = null;
	Token nn = null;
	Token dd = null;

	try
		{
		if(backtracking > 0 && alreadyParsedRule(input, 6))
			{
			return val;
			}
		// /Users/rich/dev/clojure/src/jvm/Reader.g:137:3: (n= ( Identifier | JavaIdentifier ) | ns= ( Identifier | JavaIdentifier ) '/' nn= ( Identifier | JavaIdentifier ) | dd= DotDot )
		int alt4 = 3;
		int LA4_0 = input.LA(1);

		if(((LA4_0 >= Identifier && LA4_0 <= JavaIdentifier)))
			{
			int LA4_1 = input.LA(2);

			if((LA4_1 == 34))
				{
				alt4 = 2;
				}
			else if((LA4_1 == EOF || (LA4_1 >= Identifier && LA4_1 <= OctalLiteral) || LA4_1 == Comma ||
			         (LA4_1 >= 28 && LA4_1 <= 33) || (LA4_1 >= 35 && LA4_1 <= 37)))
				{
				alt4 = 1;
				}
			else
				{
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				NoViableAltException nvae =
						new NoViableAltException(
								"136:1: symbol returns [Symbol val] : (n= ( Identifier | JavaIdentifier ) | ns= ( Identifier | JavaIdentifier ) '/' nn= ( Identifier | JavaIdentifier ) | dd= DotDot );",
								4, 1, input);

				throw nvae;
				}
			}
		else if((LA4_0 == DotDot))
			{
			alt4 = 3;
			}
		else
			{
			if(backtracking > 0)
				{
				failed = true;
				return val;
				}
			NoViableAltException nvae =
					new NoViableAltException(
							"136:1: symbol returns [Symbol val] : (n= ( Identifier | JavaIdentifier ) | ns= ( Identifier | JavaIdentifier ) '/' nn= ( Identifier | JavaIdentifier ) | dd= DotDot );",
							4, 0, input);

			throw nvae;
			}
		switch(alt4)
			{
			case 1:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:137:3: n= ( Identifier | JavaIdentifier )
			{
			n = (Token) input.LT(1);
			if((input.LA(1) >= Identifier && input.LA(1) <= JavaIdentifier))
				{
				input.consume();
				errorRecovery = false;
				failed = false;
				}
			else
				{
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				MismatchedSetException mse =
						new MismatchedSetException(null, input);
				recoverFromMismatchedSet(input, mse, FOLLOW_set_in_symbol266);
				throw mse;
				}

			if(backtracking == 0)
				{
				val = new Symbol(n.getText());
				}

			}
			break;
			case 2:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:138:3: ns= ( Identifier | JavaIdentifier ) '/' nn= ( Identifier | JavaIdentifier )
			{
			ns = (Token) input.LT(1);
			if((input.LA(1) >= Identifier && input.LA(1) <= JavaIdentifier))
				{
				input.consume();
				errorRecovery = false;
				failed = false;
				}
			else
				{
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				MismatchedSetException mse =
						new MismatchedSetException(null, input);
				recoverFromMismatchedSet(input, mse, FOLLOW_set_in_symbol280);
				throw mse;
				}

			match(input, 34, FOLLOW_34_in_symbol286);
			if(failed) return val;
			nn = (Token) input.LT(1);
			if((input.LA(1) >= Identifier && input.LA(1) <= JavaIdentifier))
				{
				input.consume();
				errorRecovery = false;
				failed = false;
				}
			else
				{
				if(backtracking > 0)
					{
					failed = true;
					return val;
					}
				MismatchedSetException mse =
						new MismatchedSetException(null, input);
				recoverFromMismatchedSet(input, mse, FOLLOW_set_in_symbol292);
				throw mse;
				}

			if(backtracking == 0)
				{
				val = new Symbol(ns.getText(), nn.getText());
				}

			}
			break;
			case 3:
				// /Users/rich/dev/clojure/src/jvm/Reader.g:139:3: dd= DotDot
			{
			dd = (Token) input.LT(1);
			match(input, DotDot, FOLLOW_DotDot_in_symbol306);
			if(failed) return val;
			if(backtracking == 0)
				{
				val = DOTDOT;
				}

			}
			break;

			}
		}

	catch(RecognitionException exc)
		{
		throw exc;
		}
	finally
		{
		if(backtracking > 0)
			{
			memoize(input, 6, symbol_StartIndex);
			}
		}
	return val;
}
// $ANTLR end symbol

// $ANTLR start keyword
// /Users/rich/dev/clojure/src/jvm/Reader.g:142:1: keyword returns [Keyword val] : ':' s= symbol ;

public final Keyword keyword() throws RecognitionException{
	Keyword val = null;
	int keyword_StartIndex = input.index();
	Symbol s = null;

